--- a/app/src/main/res/layout/dialog_add_food.xml
+++ b/app/src/main/res/layout/dialog_add_food.xml
@@ -92,31 +92,53 @@
                 app:layout_constraintStart_toStartOf="@+id/food_name_editText"
                 app:layout_constraintTop_toBottomOf="@+id/food_name_editText" />
 
-
-            <TextView
-                android:id="@+id/price_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="32dp"
-                android:text="Price"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/size_text" />
-
             <EditText
                 android:id="@+id/price_s_size"
-                android:layout_width="100dp"
+                android:layout_width="70dp"
                 android:layout_height="40dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginStart="90dp"
+                android:layout_marginTop="24dp"
                 android:background="@drawable/bg_input_edit_text"
-                android:hint="Price S size"
-                android:textSize="13dp"
+                android:hint="Price"
+                android:inputType="numberDecimal"
                 android:paddingStart="12dp"
                 android:paddingEnd="12dp"
-                app:layout_constraintStart_toStartOf="@+id/option_s_size"
-                app:layout_constraintTop_toBottomOf="@+id/option_s_size" />
+                android:textSize="13dp"
+                android:textAlignment="center"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/sizeS_text" />
+
+            <EditText
+                android:id="@+id/price_m_size"
+                android:layout_width="70dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="42dp"
+                android:layout_marginTop="24dp"
+                android:background="@drawable/bg_input_edit_text"
+                android:hint="Price"
+                android:inputType="numberDecimal"
+                android:paddingStart="12dp"
+                android:paddingEnd="12dp"
+                android:textSize="13dp"
+                android:textAlignment="center"
+                app:layout_constraintStart_toEndOf="@+id/price_s_size"
+                app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
+            <EditText
+                android:id="@+id/price_l_size"
+                android:layout_width="70dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="42dp"
+                android:layout_marginTop="24dp"
+                android:background="@drawable/bg_input_edit_text"
+                android:hint="Price"
+                android:inputType="numberDecimal"
+                android:paddingStart="12dp"
+                android:paddingEnd="12dp"
+                android:textSize="13dp"
+                android:textAlignment="center"
+                app:layout_constraintStart_toEndOf="@+id/price_m_size"
+                app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
             <TextView
                 android:id="@+id/sale_text"
@@ -124,7 +146,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="28dp"
-                android:text="Sale"
+                android:text="Sale percent"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -132,100 +154,134 @@
 
             <EditText
                 android:id="@+id/sale_editText"
-                android:layout_width="270dp"
+                android:layout_width="70dp"
                 android:layout_height="40dp"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/bg_input_edit_text"
                 android:hint="Sale"
+                android:inputType="number"
                 android:paddingStart="12dp"
                 android:paddingEnd="12dp"
                 app:layout_constraintStart_toStartOf="@+id/type_of_food_option"
                 app:layout_constraintTop_toBottomOf="@+id/type_of_food_option" />
 
-            <TextView
-                android:id="@+id/amount_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="32dp"
-                android:text="Amount"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/price_text" />
-
             <EditText
                 android:id="@+id/amount_s_size"
-                android:layout_width="100dp"
+                android:layout_width="70dp"
                 android:layout_height="40dp"
                 android:layout_marginTop="16dp"
                 android:background="@drawable/bg_input_edit_text"
                 android:hint="Amount"
+                android:inputType="number"
                 android:paddingStart="12dp"
                 android:paddingEnd="12dp"
                 android:textSize="13dp"
+                android:textAlignment="center"
                 app:layout_constraintStart_toStartOf="@+id/price_s_size"
                 app:layout_constraintTop_toBottomOf="@+id/price_s_size" />
+
+            <EditText
+                android:id="@+id/amount_m_size"
+                android:layout_width="70dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="42dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/bg_input_edit_text"
+                android:hint="Amount"
+                android:inputType="number"
+                android:paddingStart="12dp"
+                android:paddingEnd="12dp"
+                android:textSize="13dp"
+                android:textAlignment="center"
+                app:layout_constraintStart_toEndOf="@+id/amount_s_size"
+                app:layout_constraintTop_toBottomOf="@+id/price_m_size" />
+
+            <EditText
+                android:id="@+id/amount_l_size"
+                android:layout_width="70dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="42dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/bg_input_edit_text"
+                android:hint="Amount"
+                android:inputType="number"
+                android:paddingStart="12dp"
+                android:paddingEnd="12dp"
+                android:textSize="13dp"
+                android:textAlignment="center"
+                app:layout_constraintStart_toEndOf="@+id/amount_m_size"
+                app:layout_constraintTop_toBottomOf="@+id/price_l_size" />
 
             <TextView
                 android:id="@+id/size_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="28dp"
+                android:layout_marginTop="32dp"
                 android:text="Size"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/sale_text" />
 
-            <RadioButton
-                android:id="@+id/option_s_size"
+            <TextView
+                android:id="@+id/sizeS_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:checked="true"
+                android:layout_marginStart="80dp"
+                android:layout_marginTop="24dp"
                 android:text="S"
-                app:layout_constraintStart_toStartOf="@+id/sale_editText"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:layout_constraintStart_toEndOf="@+id/size_text"
                 app:layout_constraintTop_toBottomOf="@+id/sale_editText" />
 
-            <RadioButton
-                android:id="@+id/option_m_size"
+            <TextView
+                android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="100dp"
+                android:layout_marginTop="24dp"
                 android:text="M"
-                app:layout_constraintStart_toEndOf="@+id/option_s_size"
-                app:layout_constraintTop_toTopOf="@+id/option_s_size" />
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:layout_constraintStart_toEndOf="@+id/sizeS_text"
+                app:layout_constraintTop_toBottomOf="@+id/sale_editText" />
 
-            <RadioButton
-                android:id="@+id/option_l_size"
+
+            <TextView
+                android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="100dp"
+                android:layout_marginTop="24dp"
                 android:text="L"
-                app:layout_constraintStart_toEndOf="@+id/option_m_size"
-                app:layout_constraintTop_toTopOf="@+id/option_m_size" />
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:layout_constraintStart_toEndOf="@+id/textView4"
+                app:layout_constraintTop_toBottomOf="@+id/sale_editText" />
 
             <TextView
                 android:id="@+id/food_image_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="32dp"
                 android:text="Food image"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/amount_text" />
+                app:layout_constraintTop_toTopOf="@+id/browse_button" />
 
             <Button
                 android:id="@+id/browse_button"
                 android:layout_width="100dp"
                 android:layout_height="40dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="24dp"
                 android:background="@drawable/btn_login"
                 android:text="Browse"
                 app:backgroundTint="@null"
-                app:layout_constraintStart_toStartOf="@+id/amount_s_size"
+                app:layout_constraintStart_toEndOf="@+id/food_image_text"
                 app:layout_constraintTop_toBottomOf="@+id/amount_s_size" />
 
             <androidx.cardview.widget.CardView
@@ -241,8 +297,7 @@
                     android:id="@+id/image_food"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/img_pizza" />
+                    android:scaleType="centerCrop"/>
             </androidx.cardview.widget.CardView>
 
             <TextView
@@ -281,6 +336,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/description_edit_text">
 
                 <Button
+                    android:id="@+id/clear_button"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
@@ -288,12 +344,13 @@
                     android:layout_weight="1"
                     android:alpha="0.4"
                     android:background="@drawable/bg_gray_corner"
-                    android:text="Cancel"
+                    android:text="Clear"
                     android:textColor="@color/black"
                     android:textSize="14sp"
                     app:backgroundTint="@null" />
 
                 <Button
+                    android:id="@+id/add_button"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
