--- a/app/src/main/res/layout/activity_analyze.xml
+++ b/app/src/main/res/layout/activity_analyze.xml
@@ -5,7 +5,7 @@
     android:id="@+id/drawerLayout_analyze"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AnalyzeActivity">
+    tools:context=".activities.AnalyzeActivity">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
